✨ Add `/book/remove` API
